FIX: Footer width on mobile

--- a/footer.css
+++ b/footer.css
@@ -1,5 +1,5 @@
 #footer-container {
-    width: auto;
+    width: 100%;
 }
 
 #footer-1-container {
